[gd_scene load_steps=10 format=3 uid="uid://b580nt886flw4"]

[ext_resource type="Texture2D" uid="uid://b1w86smxr7onr" path="res://assets/textures/weapons/00 All.png" id="1_7p8ru"]
[ext_resource type="Script" path="res://scenes/spell_attacks/shuriken.gd" id="1_yu3ia"]
[ext_resource type="Shader" path="res://shaders/ground_explosion.gdshader" id="2_daqa7"]
[ext_resource type="AudioStream" uid="uid://xv2skbrj0ol0" path="res://assets/audio/SFX/zapsplat_warfare_knife_throwing_weapon_spin_fast_air_004_67627.mp3" id="4_253hd"]
[ext_resource type="AudioStream" uid="uid://careob8tggbjy" path="res://assets/audio/SFX/zapsplat_impact_metal_door_fist_rattle_004_19346.mp3" id="5_qgvjs"]
[ext_resource type="AudioStream" uid="uid://tiexgteb00e0" path="res://assets/audio/SFX/Draw Weapon Metal 1-1.wav" id="6_e5okt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q4cpm"]
size = Vector2(10, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mmn07"]
resource_local_to_scene = true
shader = ExtResource("2_daqa7")
shader_parameter/toggle = true
shader_parameter/alpha = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_51d87"]
size = Vector2(44, 44)

[node name="Shuriken" type="RigidBody2D"]
collision_layer = 0
collision_mask = 5
gravity_scale = 0.0
script = ExtResource("1_yu3ia")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_q4cpm")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_mmn07")
texture = ExtResource("1_7p8ru")
region_enabled = true
region_rect = Rect2(384, 448, 48, 48)

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_51d87")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_253hd")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_qgvjs")

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_e5okt")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
